[GTK] invalid application of 'sizeof' to incomplete type https://bugs.webkit.org/show_bug.cgi?id=123502

Patch by Vitaly Katunin <vkatunin@luxoft.com> on 2013-11-02
Reviewed by Carlos Garcia Campos.

* Shared/WebCoreArgumentCoders.cpp:

Canonical link: https://commits.webkit.org/141839@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@158486 268f45cc-cd09-0410-ab3c-d52691b4dbfc